<resources>

    <string name="app_name">i-kasih</string>
    <string name="drug_list">Drug List</string>
    <string name="drugName">Horse Pill</string>
    <string name="DrugDesc">Very dangerous for human</string>
    <!--page title-->
    <string name="titleCamera">Camera</string>
    <string name="titleList">Drug List</string>
    <string name="titleFind">Find Drug</string>
    <string name="titleNews">News</string>
    <string name="titleResult">Result</string>
    <!--text-->
    <string name="txt_drug">Drug :</string>
    <string name="txt_strength">Strength :</string>
    <string name="txt_imprint">Imprint :</string>
    <string name="txt_shape">Shape :</string>
    <string name="txt_color">Color :</string>
    <string name="txt_answer"></string>
    <!--button name-->
    <string name="btnCamera">Take Picture</string>
    <string name="btnSearchAgain">Search Again</string>

    <!-- Test Selection -->
    <array name="spinnerColorValue">
        <item>Red</item>
        <item>Blue</item>
        <item>Black</item>
        <item>Green</item>
    </array>
    <array name="spinnerShapeValue">
        <item>Round</item>
        <item>Box</item>
        <item>Sand</item>
        <item>Pill</item>
    </array>

</resources>